optimization \ add comment \ update struct project

--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
 					</div>
 				</div>
 				<div class="game__mark close" id="succsess">
-					<img src="./assets/succsess.svg" alt="succsess" />
+					<img src="./assets/succsess.svg" alt="succsess" class="rotate" />
 				</div>
 				<div class="game__mark close" id="cross">
-					<img src="./assets/cross.svg" alt="cross" />
+					<img src="./assets/cross.svg" alt="cross" class="rotate" />
 				</div>
 				<div class="start-menu" id="screenStart">
 					<div class="start-menu__header-menu">
@@ -59,20 +59,20 @@
 								<li class="main-menu__list-item">
 									<div class="list-item__wrapper">
 										<h3 class="list-item__heading description bold">
-											Произвольное внимание
+											Концентрацию и переключение внимания
 										</h3>
 										<p class="main-menu__description description">
-											Научитесь концентрировать внимание только на важном
+											Позволит не упускать из виду важные детали
 										</p>
 									</div>
 								</li>
 								<li class="main-menu__list-item">
 									<div class="list-item__wrapper">
 										<h3 class="list-item__heading description bold">
-											Произвольное внимание
+											Зрительное восприятие
 										</h3>
 										<p class="main-menu__description description">
-											Научитесь концентрировать внимание только на важном
+											Сможете быстро находить основные мысли в текстах
 										</p>
 									</div>
 								</li>
