--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
 					<div class="game__information"></div>
 					<div class="game_wrapper">
 						<div class="game__header">
-							<p class="game__item">Найдите указанное число:</p>
+							<p class="game__item">
+								Найдите <span class="game__item-mobile">указанное число:</span>
+							</p>
 							<p class="game__item" id="searchItem"></p>
 						</div>
 						<div class="game__main" id="fieldGame"></div>
