--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
 	<body>
 		<main class="root">
 			<section class="field" id="field">
-				<div class="countdown close"><div class="count"></div></div>
+				<div class="countdown close" id="countdown">
+					<div class="count"></div>
+				</div>
 				<div class="field__game close" id="screenGame">
 					<div class="game__information"></div>
 					<div class="game_wrapper">
